--- a/extension/styles.css
+++ b/extension/styles.css
@@ -1,7 +1,9 @@
 .bgg-info {
-    margin-top: 15px;
+    margin-top: 35px;
     margin-bottom: 15px;
-    padding: 5px;
+    padding: 15px;
+    margin: auto;
+    width: 50%;
 }
 
 .category {
@@ -18,4 +20,11 @@
     padding: 2px 10px 2px;
     background: #a7ade2;
     color: #000;
+}
+
+#categories-mechanics {
+    margin: auto;
+    width: 90%;
+    display:inline-table;
+    padding-top: 5px;
 }
